Cosmetics in the comment header documentation

--- a/index.less
+++ b/index.less
@@ -64,16 +64,14 @@ Syntax Highlighting actually includes:
 
 [Packages]
 Actually supporting:
-  * bracket-matcher @ ^0.76.0            (https://atom.io/packages/bracket-matcher)
-  * color-picker @ ^2.0.12               (https://atom.io/packages/color-picker)
-  * hightlight-selected @ ^0.10.1        (https://atom.io/packages/highlight-selected)
-  * markdown-preview @ ^0.150.0          (https://atom.io/packages/markdown-preview)
-  * minimap-highlight-selected @ ^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
+  - bracket-matcher@^0.76.0            (https://atom.io/packages/bracket-matcher)
+  - color-picker@^2.0.12               (https://atom.io/packages/color-picker)
+  - hightlight-selected@^0.10.1        (https://atom.io/packages/highlight-selected)
+  - markdown-preview@^0.150.0          (https://atom.io/packages/markdown-preview)
+  - minimap-highlight-selected@^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
 
 [Version]
-stable:     0.11.2 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
-snapshot:   /
-
+0.11.2 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
 status: ìndev
 
 For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax) and http://arcticicestudio.com/Northem (actually under construction).
@@ -100,15 +98,15 @@ Alternatively open "Settings" > "Install", set the filter to "Themes" and search
 Activate it by going to the "Settings" > "Themes" section and select "Northem Dark" from the "Syntax Theme" drop-down menu.
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio
+Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
 
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
 
 [References]
-API-Documentation:    https://atom.io/docs/api/v0.188.0/Atom
-Atom Flight Manual:   https://atom.io/docs
-LESS:                 http://lesscss.org
+API-Documentation   (https://atom.io/docs/api/v0.188.0/Atom)
+Atom Flight Manual  (https://atom.io/docs)
+LESS                (http://lesscss.org)
 */
 
 /*
