Update to new comment header documentation box format

--- a/styles/languages/Clojure.less
+++ b/styles/languages/Clojure.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#   Northem Dark Atom Syntax - Language Clojure  #
-#------------------------------------------------#
-#                  Clojure.less                  #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-28 12:07 +0100 UTC      #
-#      Modified: 2015-08-29 15:56 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Clojure +
+project   northem-dark-atom-syntax                    +
+file      Clojure.less                                +
+webiste   http://arcticicestudio.com/Northem          +
+author    Arctic Ice Studio                           +
+email     development@arcticicestudio.com             +
+copyright Copyright (C) 2015                          +
+created   2015-08-28 12:07 UTC+0100                   +
+modified  2015-12-12 20:52 UTC+0100                   +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Clojure.
