--- a/styles/languages/D.less
+++ b/styles/languages/D.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#     Northem Dark Atom Syntax - Language D      #
-#------------------------------------------------#
-#                      D.less                    #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-14 14:23 +0100 UTC      #
-#      Modified: 2015-08-16 21:24 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language D +
+project   northem-dark-atom-syntax              +
+file      D.less                                +
+webiste   http://arcticicestudio.com/Northem    +
+author    Arctic Ice Studio                     +
+email     development@arcticicestudio.com       +
+copyright Copyright (C) 2015                    +
+created   2015-08-14 14:23 UTC+0200             +
+modified  2015-12-12 20:53 UTC+0100             +
++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for D.
