--- a/styles/languages/GLSL.less
+++ b/styles/languages/GLSL.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#    Northem Dark Atom Syntax - Language GLSL    #
-#------------------------------------------------#
-#                    GLSL.less                   #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-14 15:12 +0100 UTC      #
-#      Modified: 2015-08-16 12:38 +0100 UTC      #
-#************************************************#
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language GLSL +
+project   northem-dark-atom-syntax                 +
+file      GLSL.less                                +
+webiste   http://arcticicestudio.com/Northem       +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+copyright Copyright (C) 2015                       +
+created   2015-08-14 15:12 UTC+0200                +
+modified  2015-12-12 20:56 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for GLSL.
