--- a/styles/languages/Jade.less
+++ b/styles/languages/Jade.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#    Northem Dark Atom Syntax - Language Jade    #
-#------------------------------------------------#
-#                    Jade.less                   #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-05-21 09:18 +0100 UTC      #
-#      Modified: 2015-09-13 00:30 +0100 UTC      #
-#************************************************#
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Jade +
+project   northem-dark-atom-syntax                 +
+file      Jade.less                                +
+webiste   http://arcticicestudio.com/Northem       +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+copyright Copyright (C) 2015                       +
+created   2015-05-21 09:18 UTC+0200                +
+modified  2015-12-12 20:58 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Jade.
