--- a/styles/languages/PropertyList.less
+++ b/styles/languages/PropertyList.less
@@ -1,17 +1,15 @@
 /*
-#***************************************************#
-# Northem Dark Atom Syntax - Language Property List #
-#---------------------------------------------------#
-#                  PropertyList.less                #
-#          http://arcticicestudio.com/Northem       #
-#                                                   #
-#                  Arctic Ice Studio                #
-#                  Copyright (c) 2015               #
-#           development@arcticicestudio.com         #
-#                                                   #
-#        Created : 2015-09-24 15:18 +0100 UTC       #
-#        Modified: 2015-09-24 20:57 +0100 UTC       #
-#***************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Property List +
+project   northem-dark-atom-syntax                          +
+file      PropertyList.less                                 +
+webiste   http://arcticicestudio.com/Northem                +
+author    Arctic Ice Studio                                 +
+email     development@arcticicestudio.com                   +
+copyright Copyright (C) 2015                                +
+created   2015-09-24 15:18 UTC+0200                         +
+modified  2015-12-12 20:59 UTC+0100                         +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Property Lists.
