--- a/styles/languages/XML.less
+++ b/styles/languages/XML.less
@@ -1,17 +1,15 @@
 /*
-#*****************************************#
-# Northem Dark Atom Syntax - Language XML #
-#-----------------------------------------#
-#                 XML.less                #
-#    http://arcticicestudio.com/Northem   #
-#                                         #
-#            Arctic Ice Studio            #
-#            Copyright (c) 2015           #
-#     development@arcticicestudio.com     #
-#                                         #
-#   Created : 2015-03-19 08:14 +0100 UTC  #
-#   Modified: 2015-09-24 20:58 +0100 UTC  #
-#*****************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language XML +
+project   northem-dark-atom-syntax                +
+file      XML.less                                +
+webiste   http://arcticicestudio.com/Northem      +
+author    Arctic Ice Studio                       +
+email     development@arcticicestudio.com         +
+copyright Copyright (C) 2015                      +
+created   2015-03-19 08:14 UTC+0200               +
+modified  2015-12-12 21:01 UTC+0100               +
++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for XML.
