--- a/styles/packagesupport.less
+++ b/styles/packagesupport.less
@@ -1,17 +1,15 @@
 /*
-#********************************************#
-# Northem Dark Atom Syntax - Package Support #
-#--------------------------------------------#
-#            packagesupport.less             #
-#     http://arcticicestudio.com/Northem     #
-#                                            #
-#             Arctic Ice Studio              #
-#             Copyright (c) 2015             #
-#      development@arcticicestudio.com       #
-#                                            #
-#    Created : 2015-03-17 14:36 +0100 UTC    #
-#    Modified: 2015-10-04 09:01 +0100 UTC    #
-#********************************************#
+++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Package Support +
+project   northem-dark-atom-syntax                   +
+file      packagesupport.less                        +
+webiste   http://arcticicestudio.com/Northem         +
+author    Arctic Ice Studio                          +
+email     development@arcticicestudio.com            +
+copyright Copyright (C) 2015                         +
+created   2015-03-17 14:36 UTC+0100                  +
+modified  2015-12-12 20:49 UTC+0100                  +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines package specific styles based on the matching custom classes.
