--- a/styles/sizes.less
+++ b/styles/sizes.less
@@ -1,17 +1,15 @@
 /*
-#**************************************#
-#   Northem Dark Atom Syntax - Sizes   #
-#--------------------------------------#
-#              sizes.less              #
-#  http://arcticicestudio.com/Northem  #
-#                                      #
-#          Arctic Ice Studio           #
-#          Copyright (c) 2015          #
-#   development@arcticicestudio.com    #
-#                                      #
-# Created : 2015-09-27 18:19 +0100 UTC #
-# Modified: 2015-09-27 20:23 +0100 UTC #
-#**************************************#
+++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Sizes   +
+project   northem-dark-atom-syntax           +
+file      sizes.less                         +
+webiste   http://arcticicestudio.com/Northem +
+author    Arctic Ice Studio                  +
+email     development@arcticicestudio.com    +
+copyright Copyright (C) 2015                 +
+created   2015-09-27 18:19 UTC+0100          +
+modified  2015-12-12 20:48 UTC+0100          +
+++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all syntax specific size variables.
