--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,17 +1,15 @@
 /*
-#**************************************#
-#  Northem Dark Atom Syntax - Colors   #
-#--------------------------------------#
-#             colors.less              #
-#  http://arcticicestudio.com/Northem  #
-#                                      #
-#          Arctic Ice Studio           #
-#          Copyright (c) 2015          #
-#   development@arcticicestudio.com    #
-#                                      #
-# Created : 2015-03-16 18:21 +0100 UTC #
-# Modified: 2015-09-27 20:28 +0100 UTC #
-#**************************************#
+++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Colors  +
+project   northem-dark-atom-syntax           +
+file      colors.less                        +
+webiste   http://arcticicestudio.com/Northem +
+author    Arctic Ice Studio                  +
+email     development@arcticicestudio.com    +
+copyright Copyright (C) 2015                 +
+created   2015-03-16 18:21 UTC+0100          +
+modified  2015-12-12 20:50 UTC+0100          +
+++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all syntax, editor & language specific color variables.
