--- a/styles/languages/C.less
+++ b/styles/languages/C.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#      Northem Dark Atom Syntax - Language C     #
-#------------------------------------------------#
-#                     C.less                     #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-28 11:42 +0100 UTC      #
-#      Modified: 2015-08-29 15:51 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language C +
+project   northem-dark-atom-syntax              +
+file      C.less                                +
+webiste   http://arcticicestudio.com/Northem    +
+author    Arctic Ice Studio                     +
+email     development@arcticicestudio.com       +
+copyright Copyright (C) 2015                    +
+created   2015-08-28 11:42 UTC+0100             +
+modified  2015-12-12 20:51 UTC+0100             +
++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for C.
