--- a/styles/languages/CS.less
+++ b/styles/languages/CS.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#   Northem Dark Atom Syntax - Language CS (C#)  #
-#------------------------------------------------#
-#                     CS.less                    #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-28 11:42 +0100 UTC      #
-#      Modified: 2015-08-29 15:58 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language CS (C#) +
+project   northem-dark-atom-syntax                    +
+file      CS.less                                     +
+webiste   http://arcticicestudio.com/Northem          +
+author    Arctic Ice Studio                           +
+email     development@arcticicestudio.com             +
+copyright Copyright (C) 2015                          +
+created   2015-08-28 11:42 UTC+0200                   +
+modified  2015-12-12 20:53 UTC+0100                   +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for CS (C#).
