--- a/styles/languages/HAML.less
+++ b/styles/languages/HAML.less
@@ -1,18 +1,15 @@
 /*
-#************************************************#
-#    Northem Dark Atom Syntax - Language HAML    #
-#------------------------------------------------#
-#                    HAML.less                   #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-12 14:47 +0100 UTC      #
-#      Modified: 2015-08-12 20:42 +0100 UTC      #
-#************************************************#
-
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language HAML +
+project   northem-dark-atom-syntax                 +
+file      HAML.less                                +
+webiste   http://arcticicestudio.com/Northem       +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+copyright Copyright (C) 2015                       +
+created   2015-08-12 14:47 UTC+0200                +
+modified  2015-12-12 20:57 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 [Description]
 This file defines all language specific syntax highlighting classes for HAML.
 
