--- a/styles/languages/Haskell.less
+++ b/styles/languages/Haskell.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#   Northem Atom Dark Syntax - Language Haskell  #
-#------------------------------------------------#
-#                   Haskell.less                 #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-01 10:18 +0100 UTC      #
-#      Modified: 2015-08-27 21:48 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Haskell +
+project   northem-dark-atom-syntax                    +
+file      Haskell.less                                +
+webiste   http://arcticicestudio.com/Northem          +
+author    Arctic Ice Studio                           +
+email     development@arcticicestudio.com             +
+copyright Copyright (C) 2015                          +
+created   2015-08-01 10:18 UTC+0200                   +
+modified  2015-12-12 20:57 UTC+0100                   +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Haskell.
