--- a/styles/languages/Java.less
+++ b/styles/languages/Java.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#     Northem Dark Atom Syntax - Language Java   #
-#------------------------------------------------#
-#                    Java.less                   #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-08 11:14 +0100 UTC      #
-#      Modified: 2015-08-08 12:52 +0100 UTC      #
-#************************************************#
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Java +
+project   northem-dark-atom-syntax                 +
+file      Java.less                                +
+webiste   http://arcticicestudio.com/Northem       +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+copyright Copyright (C) 2015                       +
+created   2015-08-08 11:14 UTC+0200                +
+modified  2015-12-12 20:58 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Java.
