--- a/styles/languages/R.less
+++ b/styles/languages/R.less
@@ -1,17 +1,15 @@
 /*
-#************************************************#
-#      Northem Dark Atom Syntax - Language R     #
-#------------------------------------------------#
-#                     R.less                     #
-#        http://arcticicestudio.com/Northem      #
-#                                                #
-#               Arctic Ice Studio                #
-#               Copyright (c) 2015               #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-08-14 15:42 +0100 UTC      #
-#      Modified: 2015-08-16 12:42 +0100 UTC      #
-#************************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language R +
+project   northem-dark-atom-syntax              +
+file      R.less                                +
+webiste   http://arcticicestudio.com/Northem    +
+author    Arctic Ice Studio                     +
+email     development@arcticicestudio.com       +
+copyright Copyright (C) 2015                    +
+created   2015-08-14 15:42 UTC+0200             +
+modified  2015-12-12 21:00 UTC+0100             +
++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for R.
