--- a/styles/languages/git.less
+++ b/styles/languages/git.less
@@ -1,17 +1,15 @@
 /*
-#*******************************************#
-#  Northem Dark Atom Syntax - Language git  #
-#-------------------------------------------#
-#                  git.less                 #
-#     http://arcticicestudio.com/Northem    #
-#                                           #
-#             Arctic Ice Studio             #
-#             Copyright (c) 2015            #
-#      development@arcticicestudio.com      #
-#                                           #
-#    Created : 2015-09-23 12:19 +0100 UTC   #
-#    Modified: 2015-09-24 12:49 +0100 UTC   #
-#*******************************************#
++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language git +
+project   northem-dark-atom-syntax                +
+file      git.less                                +
+webiste   http://arcticicestudio.com/Northem      +
+author    Arctic Ice Studio                       +
+email     development@arcticicestudio.com         +
+copyright Copyright (C) 2015                      +
+created   2015-09-23 12:19 UTC+0200               +
+modified  2015-12-12 20:55 UTC+0100               +
++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines basic syntax highlighting for all git specifc classes.
