[feature][ADD]: Implement language support for "C++" (CPP)

--- a/index.less
+++ b/index.less
@@ -7,9 +7,9 @@ version   0.11.2                             +
 webiste   http://arcticicestudio.com/Northem +
 author    Arctic Ice Studio                  +
 email     development@arcticicestudio.com    +
-copyright Copyright (C) 2015                 +
+copyright Copyright (C) 2015-2016            +
 created   2015-03-15 20:17 UTC+0100          +
-modified  2015-12-12 20:44 UTC+0100          +
+modified  2016-01-24 16:46 UTC+0100          +
 ++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -34,6 +34,7 @@ Visit the official homepage http://arcticicestudio.com/Northem (actually under c
 [Languages]
 Syntax Highlighting actually includes:
   - C               (https://atom.io/packages/language-c)
+  - C++             (https://atom.io/packages/language-c)
   - Clojure         (https://atom.io/packages/language-clojure)
   - CoffeeScript    (https://atom.io/packages/language-coffee-script)
   - CS (C#)         (https://atom.io/packages/language-csharp)
@@ -134,6 +135,7 @@ LESS                (http://lesscss.org)
 @import "./styles/languages/C.less";
 @import "./styles/languages/Clojure.less";
 @import "./styles/languages/CoffeeScript.less";
+@import "./styles/languages/CPP.less";
 @import "./styles/languages/CS.less";
 @import "./styles/languages/CSS.less";
 @import "./styles/languages/D.less";
