[feature][ADD]: Implement support for language 'SQL'

--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio                  +
 email     development@arcticicestudio.com    +
 copyright Copyright (C) 2015-2016            +
 created   2015-03-15 20:17 UTC+0100          +
-modified  2016-01-24 16:46 UTC+0100          +
+modified  2016-01-27 21:42 UTC+0100          +
 ++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -160,6 +160,7 @@ LESS                (http://lesscss.org)
 @import "./styles/languages/Ruby.less";
 @import "./styles/languages/SASS.less";
 @import "./styles/languages/Shell.less";
+@import "./styles/languages/SQL.less";
 @import "./styles/languages/XML.less";
 @import "./styles/languages/YAML.less";
 
