[dependencies,toolbox][ADD]: Migrate to glacier-git@0.8.0

--- a/index.less
+++ b/index.less
@@ -84,6 +84,9 @@ All changelogs are available at the GitHub Repository (https://github.com/arctic
 [Development]
 Please report bugs and suggestions for improvement/language support at https://github.com/arcticicestudio/northem-dark-atom-syntax/issues.
 
+[Development Dependencies]
+  - glacier-git@0.8.0
+
 [Recommendations]
 This theme matches the Open Source font "Source Code Pro" (https://typekit.com/fonts/source-code-pro).
 Visit the GitHub Repository at "https://github.com/adobe-fonts/source-code-pro" for more informations.
