[dependencies,toolbox][ADD]: MIgrate to glacier-apache-ant@0.5.0

--- a/index.less
+++ b/index.less
@@ -85,7 +85,8 @@ All changelogs are available at the GitHub Repository (https://github.com/arctic
 Please report bugs and suggestions for improvement/language support at https://github.com/arcticicestudio/northem-dark-atom-syntax/issues.
 
 [Development Dependencies]
-  - glacier-git@0.8.0
+  - glacier-git@0.8.0        (https://github.com/arcticicestudio/glacier-git)
+  - glacier-apache-ant@0.5.0 (https://github.com/arcticicestudio/glacier-apache-ant)
 
 [Recommendations]
 This theme matches the Open Source font "Source Code Pro" (https://typekit.com/fonts/source-code-pro).
